# Boat-detector-based-on-ORB-and-SVM

./: CMakeLists.txt
src/: boat_detector_main.cpp  boat_detector_utils.hpp  feature_classifier.cpp  feature_classifier.hpp  image_boxer.cpp  image_boxer.hpp
